--- a/Foresome/Foresome/Onboarding/Login/View/LoginViewController.xib
+++ b/Foresome/Foresome/Onboarding/Login/View/LoginViewController.xib
@@ -87,7 +87,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="345" height="56"/>
                                             <subviews>
                                                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yF2-2g-Yi0">
-                                                    <rect key="frame" x="16" y="0.0" width="329" height="56"/>
+                                                    <rect key="frame" x="16" y="0.0" width="313" height="56"/>
                                                     <color key="tintColor" red="0.56470588235294117" green="0.57647058823529407" blue="0.59607843137254901" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="56" id="RiO-Lf-hsO"/>
@@ -106,7 +106,7 @@
                                                 </textField>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="yF2-2g-Yi0" secondAttribute="trailing" id="HnU-Np-iJs"/>
+                                                <constraint firstAttribute="trailing" secondItem="yF2-2g-Yi0" secondAttribute="trailing" constant="16" id="HnU-Np-iJs"/>
                                                 <constraint firstAttribute="bottom" secondItem="yF2-2g-Yi0" secondAttribute="bottom" id="gZm-XZ-HBy"/>
                                                 <constraint firstItem="yF2-2g-Yi0" firstAttribute="leading" secondItem="NKh-xx-eUg" secondAttribute="leading" constant="16" id="itc-y6-xPY"/>
                                                 <constraint firstItem="yF2-2g-Yi0" firstAttribute="top" secondItem="NKh-xx-eUg" secondAttribute="top" id="w0E-oG-m98"/>
@@ -142,15 +142,18 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </textField>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mqd-H4-2O0">
-                                                    <rect key="frame" x="259" y="10.666666666666629" width="70" height="35"/>
+                                                    <rect key="frame" x="259" y="11.666666666666629" width="70" height="33"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="70" id="2wD-mr-Nr0"/>
                                                     </constraints>
+                                                    <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="15"/>
                                                     <color key="tintColor" red="0.56470588235294117" green="0.57647058823529407" blue="0.59607843137254901" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <state key="normal" title="Button"/>
-                                                    <buttonConfiguration key="configuration" style="plain" title="Show">
-                                                        <fontDescription key="titleFontDescription" name="Poppins-Regular" family="Poppins" pointSize="15"/>
-                                                    </buttonConfiguration>
+                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                    <state key="normal" title="Show">
+                                                        <color key="titleColor" red="0.56470588235294117" green="0.57647058823529407" blue="0.59607843137254901" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </state>
+                                                    <state key="selected" title="Hide"/>
                                                     <connections>
                                                         <action selector="passwordShowAction:" destination="-1" eventType="touchUpInside" id="ufA-PC-LnU"/>
                                                     </connections>
