--- a/Foresome/Foresome/AfterLogin/TournamentDetailView/TournamentDetailViewController.xib
+++ b/Foresome/Foresome/AfterLogin/TournamentDetailView/TournamentDetailViewController.xib
@@ -26,9 +26,23 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TournamentDetailViewController" customModule="Foresome" customModuleProvider="target">
             <connections>
+                <outlet property="attendedPriceButton" destination="ZSR-hx-Cl9" id="UwZ-pN-dxg"/>
+                <outlet property="companyName" destination="L1o-oG-Nhl" id="61H-2j-eRr"/>
+                <outlet property="folfDetailsImage" destination="DUr-SN-BZA" id="gG3-8d-9Du"/>
                 <outlet property="minusBtn" destination="jGH-vT-7ED" id="kTX-qp-OEb"/>
+                <outlet property="offerName" destination="cAo-A9-Z3i" id="MkQ-aD-GN4"/>
                 <outlet property="participantNumberLabel" destination="ZeZ-Oz-lRf" id="9q9-vi-ofH"/>
+                <outlet property="plusBtn" destination="Uqw-ze-QPz" id="ZdA-RU-vBx"/>
                 <outlet property="selectLabel" destination="GGo-MT-16h" id="HhE-1F-smN"/>
+                <outlet property="tournamentsAddress" destination="htl-MS-Grv" id="SOe-RB-KJV"/>
+                <outlet property="tournamentsDateAndTIme" destination="jQA-CT-Lqe" id="PHK-pO-Y5W"/>
+                <outlet property="tournamentsFirstPrize" destination="gZO-R0-1wK" id="HwM-4V-fSO"/>
+                <outlet property="tournamentsFormat" destination="bxQ-NM-hiw" id="bms-Uf-Cur"/>
+                <outlet property="tournamentsLocation" destination="lDH-Fc-F71" id="OqL-mU-WUv"/>
+                <outlet property="tournamentsName" destination="Bfv-a5-iEN" id="SeW-Fx-2RX"/>
+                <outlet property="tournamentsPrice" destination="qXd-FM-gsX" id="Vlp-SR-qj4"/>
+                <outlet property="tournamentsSecondsPrize" destination="vyg-31-zeG" id="uMO-Pc-UU5"/>
+                <outlet property="tournamentsSpecialPrize" destination="dZ0-Nm-bKr" id="fqG-Qz-LWq"/>
                 <outlet property="view" destination="gdT-Vf-lFq" id="5IN-Gr-Jjq"/>
             </connections>
         </placeholder>
@@ -107,7 +121,7 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="w1w-kO-wzd">
                                                     <rect key="frame" x="0.0" y="56" width="345" height="36.666666666666657"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location" translatesAutoresizingMaskIntoConstraints="NO" id="mCh-0o-O7a">
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_locations" translatesAutoresizingMaskIntoConstraints="NO" id="mCh-0o-O7a">
                                                             <rect key="frame" x="0.0" y="0.0" width="24" height="24"/>
                                                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </imageView>
@@ -399,8 +413,8 @@
         <image name="ic_dropdown" width="24" height="24"/>
         <image name="ic_ic_minus" width="24" height="24"/>
         <image name="ic_info" width="24" height="24"/>
+        <image name="ic_locations" width="24" height="24"/>
         <image name="ic_variation" width="24" height="24"/>
-        <image name="location" width="24" height="24"/>
         <image name="pex" width="4128" height="3096"/>
         <namedColor name="Black_main">
             <color red="0.13333333333333333" green="0.15686274509803921" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
