--- a/Foresome/Foresome/Tournament/TournamentHeader/TournamentHeader.xib
+++ b/Foresome/Foresome/Tournament/TournamentHeader/TournamentHeader.xib
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -17,7 +16,7 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TournamentHeader" customModule="Foresome" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleAspectFill" id="iN0-l3-epB" customClass="TournamentHeader" customModule="Foresome" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="574" height="217"/>
@@ -26,7 +25,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nUR-tJ-z2H">
                     <rect key="frame" x="0.0" y="0.0" width="574" height="217"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="minimalism" translatesAutoresizingMaskIntoConstraints="NO" id="oRC-O7-5qb">
+                        <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_1" translatesAutoresizingMaskIntoConstraints="NO" id="oRC-O7-5qb">
                             <rect key="frame" x="0.0" y="0.0" width="574" height="201"/>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
@@ -38,16 +37,16 @@
                             </userDefinedRuntimeAttributes>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="Sl6-CO-vvZ">
-                            <rect key="frame" x="24" y="124.66666666666667" width="206.66666666666666" height="60.333333333333329"/>
+                            <rect key="frame" x="24" y="134.66666666666666" width="174" height="50.333333333333343"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HELLO, GEORGE!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gx8-dC-giW">
-                                    <rect key="frame" x="0.0" y="0.0" width="99" height="18.333333333333332"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="106.66666666666667" height="15.333333333333334"/>
                                     <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="13"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tournaments" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6mC-cr-PwS">
-                                    <rect key="frame" x="0.0" y="18.333333333333329" width="206.66666666666666" height="42"/>
+                                    <rect key="frame" x="0.0" y="15.333333333333343" width="174" height="35"/>
                                     <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="30"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
@@ -55,17 +54,18 @@
                             </subviews>
                         </stackView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WWv-u5-M7U">
-                            <rect key="frame" x="518" y="148" width="32" height="32"/>
+                            <rect key="frame" x="518" y="151.66666666666666" width="32" height="32"/>
                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                             <state key="normal" image="ic_notification_active"/>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="oRC-O7-5qb" firstAttribute="top" secondItem="nUR-tJ-z2H" secondAttribute="top" id="9Z9-pA-tMe"/>
                         <constraint firstItem="Sl6-CO-vvZ" firstAttribute="leading" secondItem="nUR-tJ-z2H" secondAttribute="leading" constant="24" id="FvA-9z-bjj"/>
                         <constraint firstItem="oRC-O7-5qb" firstAttribute="leading" secondItem="nUR-tJ-z2H" secondAttribute="leading" id="PbV-He-lXz"/>
                         <constraint firstAttribute="trailing" secondItem="WWv-u5-M7U" secondAttribute="trailing" constant="24" id="eDr-l2-QaR"/>
+                        <constraint firstAttribute="height" constant="217" id="igN-xL-IVX"/>
                         <constraint firstAttribute="trailing" secondItem="oRC-O7-5qb" secondAttribute="trailing" id="nB6-1Z-Lc7"/>
                         <constraint firstAttribute="bottom" secondItem="oRC-O7-5qb" secondAttribute="bottom" constant="16" id="olF-8O-pvf"/>
                         <constraint firstItem="WWv-u5-M7U" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Sl6-CO-vvZ" secondAttribute="trailing" constant="10" id="qFl-Ul-Vlo"/>
@@ -75,6 +75,7 @@
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="lfP-NW-Xa7"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="nUR-tJ-z2H" secondAttribute="bottom" id="Ece-sz-RvD"/>
                 <constraint firstAttribute="trailing" secondItem="nUR-tJ-z2H" secondAttribute="trailing" id="azn-0I-3Fv"/>
@@ -82,14 +83,15 @@
                 <constraint firstItem="nUR-tJ-z2H" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="qxa-E2-pU8"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="headerImageView" destination="oRC-O7-5qb" id="QnH-WA-J3p"/>
+                <outlet property="usernameLabel" destination="gx8-dC-giW" id="ySl-Ra-Roo"/>
+            </connections>
             <point key="canvasLocation" x="47.328244274809158" y="315.84507042253523"/>
         </view>
     </objects>
     <resources>
         <image name="ic_notification_active" width="32" height="32"/>
-        <image name="minimalism" width="728" height="410"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="img_1" width="375" height="224"/>
     </resources>
 </document>
