--- a/Foresome/Foresome/AfterLogin/EditProfile/View/EditProfileViewController.xib
+++ b/Foresome/Foresome/AfterLogin/EditProfile/View/EditProfileViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -89,7 +89,7 @@
                     <rect key="frame" x="0.0" y="100" width="393" height="718"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ABK-Cu-OXZ">
-                            <rect key="frame" x="0.0" y="0.0" width="393" height="742.66666666666663"/>
+                            <rect key="frame" x="0.0" y="0.0" width="393" height="718"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T8Y-cn-cCs">
                                     <rect key="frame" x="24" y="16" width="345" height="56"/>
@@ -162,10 +162,10 @@
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="imM-I3-XRi">
-                                    <rect key="frame" x="24" y="160" width="345" height="160"/>
+                                    <rect key="frame" x="24" y="160" width="345" height="30"/>
                                     <subviews>
                                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m5S-5c-gCW" customClass="GrowingTextView" customModule="Foresome" customModuleProvider="target">
-                                            <rect key="frame" x="12" y="0.0" width="317" height="160"/>
+                                            <rect key="frame" x="12" y="0.0" width="317" height="30"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <color key="textColor" systemColor="labelColor"/>
@@ -206,13 +206,13 @@
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hbL-N4-g5J">
-                                    <rect key="frame" x="24" y="344" width="345" height="22.666666666666686"/>
+                                    <rect key="frame" x="24" y="214" width="345" height="22.666666666666657"/>
                                     <fontDescription key="fontDescription" name="Poppins-Bold" family="Poppins" pointSize="16"/>
                                     <color key="textColor" red="0.1333333333" green="0.15686274510000001" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="2yG-tL-GwH">
-                                    <rect key="frame" x="24" y="374.66666666666669" width="345" height="200.00000000000006"/>
+                                    <rect key="frame" x="24" y="244.66666666666669" width="345" height="200"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Zh-Gs-7KQ">
                                             <rect key="frame" x="0.0" y="0.0" width="345" height="56"/>
@@ -232,17 +232,20 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </textField>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hvn-9M-6f5">
-                                                    <rect key="frame" x="259" y="10.666666666666629" width="70" height="35"/>
+                                                    <rect key="frame" x="259" y="11.666666666666629" width="70" height="33"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="70" id="N14-Aj-t8m"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="15"/>
                                                     <color key="tintColor" name="show Color"/>
                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                    <state key="normal" title="Show"/>
-                                                    <buttonConfiguration key="configuration" style="plain" title="Show">
-                                                        <fontDescription key="titleFontDescription" name="Poppins-Regular" family="Poppins" pointSize="15"/>
-                                                    </buttonConfiguration>
+                                                    <state key="normal" title="Show">
+                                                        <color key="titleColor" red="0.56470588235294117" green="0.57647058823529407" blue="0.59607843137254901" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </state>
+                                                    <state key="selected" title="Hide">
+                                                        <color key="titleColor" red="0.56470588235294117" green="0.57647058823529407" blue="0.59607843137254901" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </state>
                                                     <connections>
                                                         <action selector="showOldPasswordAction:" destination="-1" eventType="touchUpInside" id="7B2-db-iij"/>
                                                     </connections>
@@ -270,7 +273,7 @@
                                             </userDefinedRuntimeAttributes>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3wW-sG-tZO">
-                                            <rect key="frame" x="0.0" y="71.999999999999943" width="345" height="56"/>
+                                            <rect key="frame" x="0.0" y="72" width="345" height="56"/>
                                             <subviews>
                                                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="New password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Mvt-ac-Y8f">
                                                     <rect key="frame" x="16" y="0.0" width="238" height="56"/>
@@ -287,17 +290,20 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </textField>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GT1-Qc-MaX">
-                                                    <rect key="frame" x="259" y="10.666666666666742" width="70" height="35"/>
+                                                    <rect key="frame" x="259" y="11.666666666666629" width="70" height="33"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="70" id="ICN-n6-OWM"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="15"/>
                                                     <color key="tintColor" name="show Color"/>
                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                    <state key="normal" title="Show"/>
-                                                    <buttonConfiguration key="configuration" style="plain" title="Show">
-                                                        <fontDescription key="titleFontDescription" name="Poppins-Regular" family="Poppins" pointSize="15"/>
-                                                    </buttonConfiguration>
+                                                    <state key="normal" title="Show">
+                                                        <color key="titleColor" red="0.56470588235294117" green="0.57647058823529407" blue="0.59607843137254901" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </state>
+                                                    <state key="selected" title="Hide">
+                                                        <color key="titleColor" red="0.56470588235294117" green="0.57647058823529407" blue="0.59607843137254901" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </state>
                                                     <connections>
                                                         <action selector="showNewPasswordAction:" destination="-1" eventType="touchUpInside" id="fA8-VS-qoE"/>
                                                     </connections>
@@ -325,7 +331,7 @@
                                             </userDefinedRuntimeAttributes>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qmV-Tl-CnG">
-                                            <rect key="frame" x="0.0" y="143.99999999999994" width="345" height="56"/>
+                                            <rect key="frame" x="0.0" y="144" width="345" height="56"/>
                                             <subviews>
                                                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Confirm new password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uG2-mk-pHM">
                                                     <rect key="frame" x="16" y="0.0" width="313" height="56"/>
@@ -362,7 +368,7 @@
                                     </subviews>
                                 </stackView>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="83P-H0-cm5">
-                                    <rect key="frame" x="24" y="662.66666666666663" width="345" height="56"/>
+                                    <rect key="frame" x="24" y="638" width="345" height="56"/>
                                     <color key="backgroundColor" red="0.25098039215686274" green="0.80392156862745101" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="56" id="OO7-VG-A6O"/>
