work on header tournaments

--- a/Foresome/Foresome/AfterLogin/EditProfile/View/EditProfileViewController.xib
+++ b/Foresome/Foresome/AfterLogin/EditProfile/View/EditProfileViewController.xib
@@ -382,6 +382,9 @@
                                             <real key="value" value="16"/>
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <action selector="saveButtonAction:" destination="-1" eventType="touchUpInside" id="mQJ-XX-UxD"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
