--- a/Foresome/Foresome/Onboarding/SkillLevel/View/SkillLevelViewController.xib
+++ b/Foresome/Foresome/Onboarding/SkillLevel/View/SkillLevelViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -31,6 +31,8 @@
                 <outlet property="lowerSkilledLbl" destination="JMv-7Y-bh1" id="byn-vO-b2G"/>
                 <outlet property="mediumSkilledLbl" destination="HA6-gZ-UPu" id="7aE-Xz-NBe"/>
                 <outlet property="mediumSkilledView" destination="TIN-Ep-e5L" id="bVA-Z3-OKP"/>
+                <outlet property="nextButton" destination="NDr-DP-add" id="YrE-7c-67j"/>
+                <outlet property="skipNowButton" destination="wxD-PD-voD" id="eKi-Ec-gcs"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -231,58 +233,62 @@
                                 <action selector="lowSkilledActiion:" destination="-1" eventType="touchUpInside" id="6Ov-ff-tE6"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NDr-DP-add">
-                            <rect key="frame" x="24" y="596" width="345" height="56"/>
-                            <color key="backgroundColor" red="0.25098039220000001" green="0.80392156859999997" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="56" id="Axj-qv-4Jo"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="15"/>
-                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                            <state key="normal" title="Next"/>
-                            <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="boolean" keyPath="isRounded" value="NO"/>
-                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                    <real key="value" value="16"/>
-                                </userDefinedRuntimeAttribute>
-                            </userDefinedRuntimeAttributes>
-                            <connections>
-                                <action selector="nextAction:" destination="-1" eventType="touchUpInside" id="Ees-6b-PLx"/>
-                            </connections>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wxD-PD-voD">
-                            <rect key="frame" x="24" y="660" width="345" height="56"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="56" id="ZJx-VX-SET"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="15"/>
-                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                            <state key="normal" title="Skip For Now">
-                                <color key="titleColor" red="0.59215686270000001" green="0.61176470589999998" blue="0.62745098040000002" alpha="1" colorSpace="calibratedRGB"/>
-                            </state>
-                            <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="boolean" keyPath="isRounded" value="NO"/>
-                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                    <real key="value" value="16"/>
-                                </userDefinedRuntimeAttribute>
-                            </userDefinedRuntimeAttributes>
-                            <connections>
-                                <action selector="skipForNowAction:" destination="-1" eventType="touchUpInside" id="Q85-tP-LAZ"/>
-                            </connections>
-                        </button>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="CSC-0r-KuF">
+                            <rect key="frame" x="24" y="596" width="345" height="120"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NDr-DP-add">
+                                    <rect key="frame" x="0.0" y="0.0" width="345" height="56"/>
+                                    <color key="backgroundColor" red="0.25098039220000001" green="0.80392156859999997" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="56" id="Axj-qv-4Jo"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="15"/>
+                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                    <state key="normal" title="Next"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="isRounded" value="NO"/>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="16"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <action selector="nextAction:" destination="-1" eventType="touchUpInside" id="Ees-6b-PLx"/>
+                                    </connections>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wxD-PD-voD">
+                                    <rect key="frame" x="0.0" y="64" width="345" height="56"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="56" id="ZJx-VX-SET"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" name="Poppins-Medium" family="Poppins" pointSize="15"/>
+                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                    <state key="normal" title="Skip For Now">
+                                        <color key="titleColor" red="0.59215686270000001" green="0.61176470589999998" blue="0.62745098040000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    </state>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="isRounded" value="NO"/>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="16"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <action selector="skipForNowAction:" destination="-1" eventType="touchUpInside" id="Q85-tP-LAZ"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                        </stackView>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstItem="ZjE-nL-X4t" firstAttribute="leading" secondItem="TIN-Ep-e5L" secondAttribute="leading" id="2aa-H7-mBr"/>
-                        <constraint firstItem="wxD-PD-voD" firstAttribute="leading" secondItem="NDr-DP-add" secondAttribute="leading" id="2np-MC-ZPb"/>
                         <constraint firstItem="ZjE-nL-X4t" firstAttribute="trailing" secondItem="TIN-Ep-e5L" secondAttribute="trailing" id="5IQ-DY-NOQ"/>
                         <constraint firstItem="muN-in-hTP" firstAttribute="trailing" secondItem="Ryj-um-Z6H" secondAttribute="trailing" id="5al-Ct-orc"/>
                         <constraint firstItem="muN-in-hTP" firstAttribute="bottom" secondItem="Ryj-um-Z6H" secondAttribute="bottom" id="8Kr-gC-EkS"/>
-                        <constraint firstAttribute="bottom" secondItem="wxD-PD-voD" secondAttribute="bottom" constant="36" id="9Jt-pT-0M3"/>
+                        <constraint firstItem="CSC-0r-KuF" firstAttribute="leading" secondItem="Ryj-um-Z6H" secondAttribute="leading" id="9ml-pc-Imz"/>
+                        <constraint firstItem="CSC-0r-KuF" firstAttribute="trailing" secondItem="Ryj-um-Z6H" secondAttribute="trailing" id="B4L-V5-uzW"/>
+                        <constraint firstAttribute="bottom" secondItem="CSC-0r-KuF" secondAttribute="bottom" constant="36" id="Cm2-tb-3EI"/>
                         <constraint firstItem="muN-in-hTP" firstAttribute="top" secondItem="Ryj-um-Z6H" secondAttribute="top" id="FeS-Cd-1zw"/>
-                        <constraint firstItem="wxD-PD-voD" firstAttribute="trailing" secondItem="NDr-DP-add" secondAttribute="trailing" id="IrT-0P-QNv"/>
                         <constraint firstItem="Ryj-um-Z6H" firstAttribute="leading" secondItem="h5M-5n-Ea7" secondAttribute="leading" id="JUe-T0-WB1"/>
-                        <constraint firstItem="NDr-DP-add" firstAttribute="leading" secondItem="1Cn-iX-2ic" secondAttribute="leading" id="NTb-XO-eWt"/>
                         <constraint firstItem="Fb8-NS-ohT" firstAttribute="bottom" secondItem="1Cn-iX-2ic" secondAttribute="bottom" id="OzC-LY-R5D"/>
                         <constraint firstItem="TIN-Ep-e5L" firstAttribute="top" secondItem="Ryj-um-Z6H" secondAttribute="bottom" constant="16" id="P6f-Xy-kBi"/>
                         <constraint firstItem="Fb8-NS-ohT" firstAttribute="trailing" secondItem="1Cn-iX-2ic" secondAttribute="trailing" id="PYw-tX-39Y"/>
@@ -298,15 +304,12 @@
                         <constraint firstItem="ZjE-nL-X4t" firstAttribute="bottom" secondItem="TIN-Ep-e5L" secondAttribute="bottom" id="ctj-YD-OPf"/>
                         <constraint firstItem="h5M-5n-Ea7" firstAttribute="leading" secondItem="5RS-cW-OI7" secondAttribute="leading" id="f3v-Ma-P3K"/>
                         <constraint firstItem="h5M-5n-Ea7" firstAttribute="trailing" secondItem="5RS-cW-OI7" secondAttribute="trailing" id="gaH-aE-Hs0"/>
-                        <constraint firstItem="wxD-PD-voD" firstAttribute="top" secondItem="NDr-DP-add" secondAttribute="bottom" constant="8" id="iEw-AK-EyN"/>
                         <constraint firstItem="Fb8-NS-ohT" firstAttribute="top" secondItem="1Cn-iX-2ic" secondAttribute="top" id="l9z-vL-9Yq"/>
-                        <constraint firstItem="NDr-DP-add" firstAttribute="top" relation="greaterThanOrEqual" secondItem="1Cn-iX-2ic" secondAttribute="bottom" constant="30" id="mJ8-eS-85B"/>
                         <constraint firstItem="muN-in-hTP" firstAttribute="leading" secondItem="Ryj-um-Z6H" secondAttribute="leading" id="nFx-gN-NeU"/>
                         <constraint firstItem="1Cn-iX-2ic" firstAttribute="top" secondItem="TIN-Ep-e5L" secondAttribute="bottom" constant="16" id="ofX-xd-UsK"/>
                         <constraint firstItem="1Cn-iX-2ic" firstAttribute="leading" secondItem="TIN-Ep-e5L" secondAttribute="leading" id="p0f-kl-HfO"/>
                         <constraint firstItem="ZjE-nL-X4t" firstAttribute="top" secondItem="TIN-Ep-e5L" secondAttribute="top" id="uYk-8o-k7u"/>
                         <constraint firstItem="5RS-cW-OI7" firstAttribute="leading" secondItem="3QC-jL-7vj" secondAttribute="leading" constant="24" id="x1v-bT-O2U"/>
-                        <constraint firstItem="NDr-DP-add" firstAttribute="trailing" secondItem="1Cn-iX-2ic" secondAttribute="trailing" id="z73-hZ-Pgc"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="boolean" keyPath="isRounded" value="NO"/>
