--- a/Foresome/Foresome/AfterLogin/NewsFeed/Cell/PollResultTableCell.xib
+++ b/Foresome/Foresome/AfterLogin/NewsFeed/Cell/PollResultTableCell.xib
@@ -72,8 +72,9 @@
                                     <action selector="moreAction:" destination="cUS-JK-dYg" eventType="touchUpInside" id="EWo-0c-9IQ"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="The most important question of all: At the turn, you’re gabbing a…" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ogl-Ld-Qoz">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" verticalCompressionResistancePriority="749" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ogl-Ld-Qoz" customClass="ExpendableLinkLabel" customModule="Foresome" customModuleProvider="target">
                                 <rect key="frame" x="16" y="83" width="310" height="39.666666666666657"/>
+                                <string key="text">The most important question of all: At the turn, you’re gabbing The most important question of all: At the turn, you’re gabbing a…</string>
                                 <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="14"/>
                                 <color key="textColor" red="0.1333333333" green="0.15686274510000001" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
