--- a/Foresome/Foresome/AfterLogin/NewsFeed/Cell/NewsFeedTableCell.xib
+++ b/Foresome/Foresome/AfterLogin/NewsFeed/Cell/NewsFeedTableCell.xib
@@ -93,7 +93,7 @@
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zHk-7I-fQ2">
                                                         <rect key="frame" x="0.0" y="93" width="153.33333333333334" height="91"/>
                                                         <subviews>
-                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cccc" translatesAutoresizingMaskIntoConstraints="NO" id="aGd-Bv-Nfw">
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cccc" translatesAutoresizingMaskIntoConstraints="NO" id="aGd-Bv-Nfw">
                                                                 <rect key="frame" x="0.0" y="0.0" width="153.33333333333334" height="91"/>
                                                             </imageView>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pvl-ru-FZ5">
